<resources>
    <string name="app_name">MyNotes</string>
    <string name="add_button">+</string>
    <string name="Logo_txt">MyNotes</string>
    <string name="new_note_text">Новая заметка</string>
    <string name="note_title">Заголовок</string>
    <string name="note_completed_date">Дата</string>
    <string name="note_text">Текст заметки</string>
    <string name="save_button_text">Сохранить</string>
    <string name="full_note_title">Заметка</string>
    <string name="comp_date">Срок выполнения</string>
    <string name="save_btn">Сохранить</string>
    <string name="new_note_btn">Новая заметка</string>
    <string name="edit_button_text">Редактировать</string>
    <string name="del_btn_text">Удалить</string>

    <string-array name="notes_title">
        <item>Заметка 1</item>
        <item>Заметка 2</item>
        <item>Заметка 3</item>
        <item>Заметка 4</item>
        <item>Заметка 5</item>
    </string-array>

    <string-array name="notes_text">
        <item>Тескт заметки 1</item>
        <item>Тескт заметки 2</item>
        <item>Тескт заметки 3</item>
        <item>Тескт заметки 4</item>
        <item>Тескт заметки 5</item>
    </string-array>

    <string-array name="notes_date">
        <item>Дата заметки 1</item>
        <item>Дата заметки 2</item>
        <item>Дата заметки 3</item>
        <item>Дата заметки 4</item>
        <item>Дата заметки 5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_note_main_title">Редактирование заметки</string>

</resources>