<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/note_background"
    android:orientation="vertical"
    android:padding="@dimen/main_activity_padding"
    tools:context="ui.NewNoteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:gravity="center"
        android:text="@string/new_note_text"
        android:textColor="@color/black"
        android:textSize="@dimen/new_note_text_size" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/line_height"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:background="@color/color_grey" />

    <EditText
        android:id="@+id/new_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:hint="@string/note_title"
        android:inputType="text"
        android:textSize="@dimen/note_text_size" />

    <EditText
        android:id="@+id/new_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:hint="@string/note_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/new_note_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comp_date"
        android:inputType="date" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|end"
        android:text="@string/save_btn" />

</LinearLayout>